--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1>Mohamed Abdalgany</h1>
         <p>UI/UX Designer | Passionate about user-centered design and digital experiences</p>
         <!-- استبدل profile.jpg باسم صورتك الشخصية -->
-        <img src="profile.jpg" alt="Mohamed Abdalgany" class="profile">
+        <img src="https://i.postimg.cc/2y6KdtJY/Whats-App-Image-2025-07-17-at-12-43-07-c8ad5211.jpg" alt="Mohamed Abdalgany" class="profile">
     </header>
 
     <section>
@@ -145,3 +145,4 @@
     </footer>
 </body>
 </html>
+
